--- a/charts/openlit/templates/ingress.yml
+++ b/charts/openlit/templates/ingress.yml
@@ -50,11 +50,11 @@ spec:
             backend:
               {{- if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion }}
               service:
-                name: openlit
+                name: {{ include "openlit.fullname" $ }}
                 port:
                   number: {{ $svcPort }}
               {{- else }}
-              serviceName: {{ include "openlit.fullname" . }}
+              serviceName: {{ include "openlit.fullname" $ }}
               servicePort: {{ $svcPort }}
               {{- end }}
           {{- end }}
