update helm release

--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -104,6 +104,20 @@ jobs:
       - name: Install Helm
         uses: azure/setup-helm@v4
 
+      - name: Build chart dependencies
+        run: |
+          echo "📦 Building dependencies for all charts with dependencies"
+          for chart in charts/*/Chart.yaml; do
+            chart_dir=$(dirname "$chart")
+            if [ -f "$chart_dir/Chart.yaml" ] && grep -q "^dependencies:" "$chart_dir/Chart.yaml"; then
+              echo "Building dependencies for $chart_dir"
+              cd "$chart_dir"
+              helm dependency build
+              cd - > /dev/null
+            fi
+          done
+          echo "✅ All chart dependencies built"
+
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
         with:
