--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -104,6 +104,13 @@ jobs:
       - name: Install Helm
         uses: azure/setup-helm@v4
 
+      - name: Add Helm repositories
+        run: |
+          echo "📦 Adding OpenLIT Helm repository"
+          helm repo add openlit https://openlit.github.io/helm/
+          helm repo update
+          echo "✅ Helm repositories added and updated"
+
       - name: Build chart dependencies
         run: |
           echo "📦 Building dependencies for all charts with dependencies"
